--- a/style.css
+++ b/style.css
@@ -16,12 +16,14 @@ body{
 .title h1{
 	font: sans-serif;
 	font-size: 45px;
+	-webkit-text-stroke: -2px black;
+	-webkit-text-fill-color: whi;
 }
 table, th, td {
 	border: 1px solid white;
 	align-self: center;
 	color: white;	
-	margin-left: 37%;
+	margin-left: 35%;
 	margin-right: 35%;
 	font-family: sans-serif;
-}	
+}
