--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body{
 .title h1{
 	font: sans-serif;
 	font-size: 45px;
-	-webkit-text-stroke: -2px black;
-	-webkit-text-fill-color: whi;
+	-webkit-text-stroke: 1px black;
+	-webkit-text-fill-color: white;
 }
 table, th, td {
 	border: 1px solid white;
